[package]
name = "testcontainers_example"
edition = "2024"

[dependencies]
redis = { version = "0.29.2", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["redis"] }
futures-util = "0.3"
